# arm64-disassembler

./: CMakeLists.txt  README.md
include/: category_levels.h  classify.h  decode_util.h  disassembler.h  elf_parser.h  label_inserter.h  main.h
include/decoders/: decode_branches.h  decode_data_proc_imm.h  decode_data_proc_reg.h  decode_load_stores.h
src/: classify.cpp  disassembler.cpp  elf_parser.cpp  label_inserter.cpp  main.cpp
src/decoders/: decode_branches.cpp  decode_data_proc_imm.cpp  decode_data_proc_reg.cpp  decode_load_stores.cpp
